--- a/public/signin.html
+++ b/public/signin.html
@@ -144,26 +144,25 @@
                 </div>
 
 
-                </div>
         </div>
-
-
-
-
-    </div </form> </div> </div>
-
-
-    <div id="ThankYouForm">
-            <div class="row">
-                <h4 class="Light center">Thanks for signing up!</h4>
-                <h5 class="Light center">Our platform is coming soon</h5>
-                <h6 class="Light center">but we'll contact you for more updates!</h6>
-                <a class="waves-effect waves-light btn">Share!</a>
-            </div>
     </div>
 
-    
-    <script defer src="./js/tracking2.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase-firestore.js"></script>
-    <script defer src="./js/firebase_email.js"></script>
+
+
+
+</div </form> </div> </div> <div id="ThankYouForm">
+<div class="row">
+    <h4 class="Light center">Thanks for signing up!</h4>
+    <h5 class="Light center">Our platform is coming soon</h5>
+    <h6 class="Light center">but we'll contact you for more updates!</h6>
+    <div id="centerButton">
+        <a href="index.html" class="waves-effect waves-light btn">Take Me Back!</a>
+    </div>
+</div>
+</div>
+
+
+<script defer src="./js/tracking2.js"></script>
+<script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+<script src="https://www.gstatic.com/firebasejs/4.12.0/firebase-firestore.js"></script>
+<script defer src="./js/firebase_email.js"></script>
