--- a/public/index.html
+++ b/public/index.html
@@ -183,8 +183,7 @@
 
   <div style="height: 18vh; position: relative; bottom: 5vh; text-align: center">
     <h5 class="">
-      <h5 style="font-family: Aldrich">c</h5>
-      <h5 style="font-family: Aldrich">ai</h5>
+      <span style="font-family: Aldrich">c</span><span style="font-family: Aldrich">ai</span>
       rrier is a HIPAA compliant semi-automated two way messaging system designed for 
       healthcare 
       professionals 
