--- a/public/index.html
+++ b/public/index.html
@@ -169,7 +169,7 @@
     </div>
   </nav>
 
-  <div id="index-banner" class="parallax-container" style="height: calc(81vh - 56px);">
+  <div id="index-banner" class="parallax-container" style="height: calc(100vh - 56px);">
 
     <div class='particle-network-animation' style="position: fixed; top: 0; height: 100vh; width: 100vw; z-index: -1">
     </div>
@@ -177,21 +177,22 @@
       <div class="container">
         <img src="images/HomeTrans.png" style="width: 100%; position: relative; top: 5vh;">
         <br><br>
+        <div style="text-align: center; color: black; position: relative; top: 5vh;">
+            <h5>
+              <span style="font-family: Aldrich; color: #008080; font-size: 2rem">c</span><span style="font-family: Aldrich; color: #004c4c; font-size: 3rem">ai</span><span style="font-family: Aldrich; color: #008080; font-size: 2rem">rrier</span>
+              <span style="font-family: Montserrat; font-size: 2rem">is a HIPAA compliant semi-automated two way messaging system designed for</span>
+              <span style="font-family: Aldrich; color: #008080; font-size: 2rem">healthcare</span>
+              <span style="font-family: Aldrich; color: #004c4c; font-size: 2rem">professionals</span>
+              <span style="font-family: Montserrat; font-size: 2rem">and powered by</span>
+              <span style="font-family: Aldrich; color: #008080; font-size: 2rem">artificial</span>
+              <span style="font-family: Aldrich; color: #004c4c; font-size: 2rem">intelligence</span>
+            </h5>
+          </div>
       </div>
     </div>
   </div>
 
-  <div style="height: 18vh; position: relative; bottom: 5vh; text-align: center">
-    <h5 class="">
-      <span style="font-family: Aldrich">c</span><span style="font-family: Aldrich">ai</span>
-      rrier is a HIPAA compliant semi-automated two way messaging system designed for 
-      healthcare 
-      professionals 
-      and powered by 
-      artificial 
-      intelligence
-    </h5>
-  </div>
+  
 
 
   <div class="teal valign-wrapper" style="color: white;">
@@ -233,8 +234,7 @@
 
           <div class="col s12 m6">
             <div class="icon-block">
-              <img src="images/pongsawat-pasom-GqNqFMh3OoU-unsplash.jpg" style="width: 100%; border-radius: 4rem;"
-                class="responsive-img animated slideInRight">
+              <img src="images/pongsawat-pasom-GqNqFMh3OoU-unsplash.jpg" style="width: 100%; border-radius: 4rem;" class="responsive-img animated slideInRight">
             </div>
           </div>
         </div>
