added tracking code

--- a/public/adminPages/dashboard.html
+++ b/public/adminPages/dashboard.html
@@ -35,9 +35,9 @@
                             <div class="background">
                                 <img id="backgroundImage" src="../../resc/background.jpg">
                             </div>
-                            <a href="../homePage2.html"><img class="circle" src="../../resc/ourLogo.png""></a>
-                <a href=" #name"><span class="name">Admin</span></a>
-                            <a href="#email"><span class="email">admin@gmail.com</span></a>
+                            <a href="../homePage2.html"><img class="circle" src="../images/cAIrrierLogoTrans.png"></a>
+                <a href=" #name"><span class="name">cAIrrier test flight</span></a>
+                            <a href="#email"><span class="email">cAIrrier@gmail.com</span></a>
                         </div>
                     </li>
                     <li class="active"><a href="./dashboard.html"><i class="material-icons">dashboard</i>dashboard</a>
@@ -120,7 +120,7 @@
                 <div class="col-sm-5">
                     <div class="animated fadeInLeft card darken-1 topCard">
                         <div class="card-content black-text">
-                            <span class="card-title">Total Hours</span>
+                            <span class="card-title">Some Data Analysis</span>
                             <div id="linePlot" class="ct-chart .ct-perfect-fifth"></div>
                         </div>
                     </div>
