--- a/public/signin.html
+++ b/public/signin.html
@@ -1,4 +1,15 @@
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-144752615-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-144752615-1');
+</script>
+
+
     <link rel="stylesheet" href="style/signin.css">
     <link rel="stylesheet" href="style/materialize.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
