--- a/public/adminPages/accounts/invitations.html
+++ b/public/adminPages/accounts/invitations.html
@@ -36,9 +36,9 @@
                             <div class="background">
                                 <img id="backgroundImage" src="../../../resc/background.jpg">
                             </div>
-                            <a href="#user"><img class="circle" src="../../../resc/ourLogo.png"></a>
-                <a href=" #name"><span class="name">Admin</span></a>
-                            <a href="#email"><span class="email">me@admin.com</span></a>
+                            <a href="#user"><img class="circle" src="../../images/cAIrrierLogoTrans.png"></a>
+                <a href=" #name"><span class="name">cAIrrier demo</span></a>
+                            <a href="#email"><span class="email">cairrer@gmail.com</span></a>
                         </div>
                     </li>
                     <li class="active"><a href="../dashboard.html"><i class="material-icons">dashboard</i>dashboard</a>
