--- a/public/signin.html
+++ b/public/signin.html
@@ -105,7 +105,7 @@
 <!-- end Mixpanel -->
 <div class="container" id="form">
     <div id="header">
-        <h1>Let's get started.</h1>
+        <h1 style="color: black">Let's get started.</h1>
     </div>
 
 
@@ -153,23 +153,21 @@
                         </button>
                     </div>
                 </div>
-
-
+            </form>
         </div>
     </div>
+</div> 
 
 
-
-
-</div </form> </div> </div> <div id="ThankYouForm">
-<div class="row">
-    <h4 class="Light center">Thanks for signing up!</h4>
-    <h5 class="Light center">Our platform is coming soon</h5>
-    <h6 class="Light center">but we'll contact you for more updates!</h6>
-    <div id="centerButton">
-        <a href="index.html" class="waves-effect waves-light btn">Take Me Back!</a>
+<div id="ThankYouForm">
+    <div class="row">
+        <h4 class="Light center">Thanks for signing up!</h4>
+        <h5 class="Light center">Our platform is coming soon</h5>
+        <h6 class="Light center">but we'll contact you for more updates!</h6>
+        <div id="centerButton">
+            <a href="index.html" class="waves-effect waves-light btn">Take Me Back!</a>
+        </div>
     </div>
-</div>
 </div>
 
 
