--- a/public/signin.html
+++ b/public/signin.html
@@ -147,7 +147,7 @@
                 </div>
                 <div class="row">
                     <div class="input-field col s6">
-                        <button id="submit" class="center btn btn-large  waves-effect waves-light" type="submit"
+                        <button id="submit" class="center btn btn-large  waves-effect waves-light"
                             name="action">Register
                             <i class="sizeI material-icons right">done</i>
                         </button>
