--- a/public/index.html
+++ b/public/index.html
@@ -158,13 +158,13 @@
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
   <nav class="transparentBG" role="navigation" style="position: sticky; top: 0; z-index: 5;">
-    <div class="nav-wrapper container">
-      <img src="images/cAIrrierLogoTrans.png" alt="Navigation Icon" style="height: inherit; position: relative; left: -5vw;">
+    <div class="nav-wrapper">
+      <img src="images/cAIrrierLogoTrans.png" alt="Navigation Icon" style="height: inherit; position: relative; left: 1%;">
       <a id="logo-container" href="/" class="brand-logo left hide-on-med-and-down" style="height: inherit"><img src="images/NavTrans.png"
-          alt="cAIre technologies" style="height: inherit; position: relative; left: -5vw;"></a>
+          alt="cAIre technologies" style="height: inherit;"></a>
       <ul class="right">
         <li id="topSignUP"><a href="signin.html">Sign Up Now</a></li>
-        <li id="logInUP"><a href="signin.html">Login</a></li>
+        <!-- <li id="logInUP"><a href="signin.html">Login</a></li> -->
       </ul>
     </div>
   </nav>
@@ -195,15 +195,24 @@
   
 
 
-  <div class="teal valign-wrapper" style="color: white;">
+  <div class="valign-wrapper" style="color: white; background-color: #66b2b2">
     <div class="container valign-wrapper" style="text-align: center;">
       <div class="row" style="font-weight: bolder">
-        <h1>WHAT IS CARRIER</h1>
-        <p class="Light" style="font-size: 1.2rem">cAIrrier is a semi-automated two way messaging platform designed for health care workers. Our
-          platform implements deep learning to optimize communication with patients. We believe a messaging platform
+        <span style="font-size: 5rem ;font-family: Montserrat">What is </span>
+        <span style="font-size: 5rem ;font-family: Aldrich; color: #008080">c</span><span style="font-size: 6rem ;font-family: Aldrich; color: #004c4c">ai</span><span style="font-size: 5rem ;font-family: Aldrich; color: #008080">rrier</span>
+
+        <p class="Light" style="font-size: 1.2rem"> 
+        <span style="font-family: Aldrich; color: #008080; font-size: 2rem;">c</span><span style="font-family: Aldrich; color: #004c4c; font-size: 2.5rem;">ai</span><span style="font-family: Aldrich; color: #008080; font-size: 2rem;">rrier</span>
+        is a semi-automated two way messaging platform designed for 
+        <span style="font-family: Aldrich; color: #008080">health care workers</span>.
+        Our
+          platform implements 
+          <span style="font-family: Aldrich; color: #004c4c">deep learning</span>
+           to optimize communication with patients. We believe a messaging platform
           should be trustworthy, intuitive, confidential, and easily customizable to meet the specific needs of your
           practice.
-          Because we cAIr.
+          Because we 
+          <span style="font-family: Aldrich; color: #008080">c<span style="color: #004c4c; font-size: 1.5rem">ai</span>r</span>.
         </p>
       </div>
     </div>
