--- a/public/index.html
+++ b/public/index.html
@@ -36,11 +36,12 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>-- CAIRRIER --</title>
+  <title>cAIrrier</title>
 
 
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="shortcut icon" type="image/png" href="images/cAIrrierLogoTrans.png"/>
 
   <link rel="stylesheet" href="./style/animate.css">
   <link rel="stylesheet" href="./style/font.css">
