--- a/public/signin.html
+++ b/public/signin.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="style/signin.css">
     <link rel="stylesheet" href="style/materialize.css">
+    <link rel="stylesheet" href="style/font.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat%7CSource+Sans+Pro&display=swap" rel="stylesheet">
 
@@ -105,7 +106,7 @@
 <!-- end Mixpanel -->
 <div class="container" id="form">
     <div id="header">
-        <h1 style="color: black">Let's get started.</h1>
+        <h1 style="color: black; font-family: Aldrich">Let's get started</h1>
     </div>
 
 
