--- a/public/index.html
+++ b/public/index.html
@@ -361,6 +361,17 @@
 
     <div class="white" style="height: 2px; width: 100vw;"></div> -->
 
+  <div class="valign-wrapper white" style="height: 25vh; color: teal">
+    <div class="row">
+      <div class="col s12 center">
+        <h1 class="Light">NOT A DOCTOR?</h1>
+        <a href="mailto:?subject=I wanted you to see this site&amp;body=Check out this site http://www.cairtext.com."
+        title="Share by Email" id="business-button" class="btn-small waves-effect waves-light teal lighten-1"
+          style="color: white;">Share to your doctor</a>
+      </div>
+    </div>
+  </div>
+
   <footer class="page-footer" style="background-color: rgb(82, 189, 180);">
     <div class="container">
       <div class="row">
@@ -374,7 +385,7 @@
         <div class="col l4 s6 offset-l1">
           <h5 class="white-text" style="text-align: right">CONNECT</h5>
           <ul id="sociallist">
-            <li><a class="white-text" href="#!">
+            <li><a class="white-text" href="https://www.facebook.com/cairrier">
                 <img src="images/icons/iconmonstr-facebook-3-240.png" alt="Facebook">
               </a></li>
           </ul>
@@ -383,7 +394,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-        Made by <a class="black-text text-lighten-3" href="http://oof.yxz">cAIr technologies</a>
+        Made by <a class="black-text text-lighten-3" href="http://cairtext.com">cAIr technologies</a>
       </div>
     </div>
   </footer>
