--- a/public/index.html
+++ b/public/index.html
@@ -361,13 +361,14 @@
 
     <div class="white" style="height: 2px; width: 100vw;"></div> -->
 
-  <div class="valign-wrapper white" style="height: 25vh; color: teal">
+  <div class="valign-wrapper white" style=" color: teal">
     <div class="row">
       <div class="col s12 center">
         <h1 class="Light">NOT A DOCTOR?</h1>
         <a href="mailto:?subject=I wanted you to see this site&amp;body=Check out this site http://www.cairtext.com."
         title="Share by Email" id="business-button" class="btn-small waves-effect waves-light teal lighten-1"
           style="color: white;">Share to your doctor</a>
+          <br><br>
       </div>
     </div>
   </div>
