--- a/public/adminPages/dashboard.html
+++ b/public/adminPages/dashboard.html
@@ -4,7 +4,6 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../styles/chartist.min.css">
 
 
 
@@ -33,7 +32,6 @@
                     <li>
                         <div class="user-view">
                             <div class="background">
-                                <img id="backgroundImage" src="../../resc/background.jpg">
                             </div>
                             <a href="../homePage2.html"><img class="circle" src="../images/cAIrrierLogoTrans.png"></a>
                 <a href=" #name"><span class="name">cAIrrier test flight</span></a>
@@ -46,10 +44,8 @@
                         <div class="divider"></div>
                     </li>
                     <li><a class="subheader">Applications</a></li>
-                    <li><a href="./applications/toDo.html"><i class="material-icons">note</i>To Do</a></li>
-                    <li><a href="./applications/mail.html"><i class="material-icons">email</i>Mail</a></li>
-                    <li><a href="./applications/contacts.html"><i class="material-icons">contacts</i>Contacts</a></li>
-                    <li><a href="./applications/calendar.html"><i class="material-icons">date_range</i>Calender</a></li>
+                    <li><a href="./applications/toDo.html"><i class="material-icons">note</i>Chat</a></li>
+                    <li><a href="./applications/mail.html"><i class="material-icons">email</i>Contacts</a></li>
                     <li>
                         <div class="divider"></div>
                     </li>
@@ -120,7 +116,7 @@
                 <div class="col-sm-5">
                     <div class="animated fadeInLeft card darken-1 topCard">
                         <div class="card-content black-text">
-                            <span class="card-title">Some Data Analysis</span>
+                            <span class="card-title">Preditive Patterns</span>
                             <div id="linePlot" class="ct-chart .ct-perfect-fifth"></div>
                         </div>
                     </div>
@@ -129,7 +125,7 @@
                 <div class="col-md-7">
                     <div class=" animated fadeInRight card darken-1 topCard">
                         <div class="card-content black-text">
-                            <span class="card-title">Comapany Stuff</span>
+                            <span class="card-title">Patient Analysis</span>
                             <div id="compBar" class="ct-chart .ct-major-seventh "></div>
                         </div>
                     </div>
@@ -144,7 +140,7 @@
                 <div class="col-md-5">
                     <div class=" animated fadeInUp card darken-1 ">
                         <div class="card-content black-text midCard">
-                            <span class="card-title">Total Memes</span>
+                            <span class="card-title">Smart Diagnostics</span>
                         </div>
                     </div>
                 </div>
@@ -152,8 +148,8 @@
                 <div class="col-md-3">
                     <div class=" animated fadeInUp card darken-1 ">
                         <div class="card-content black-text midCard">
-                            <span class="card-title">Upcoming Events</span>
-                            <p>Voluneet Fair</p>
+                            <span class="card-title">Urgent Messages</span>
+                            <p>Based on John Doe's sms message, our algorithm predicts that he has high symptons of anxiety!</p>
                         </div>
                     </div>
                 </div>
@@ -161,10 +157,11 @@
                 <div class="col-md-4">
                     <div class="animated fadeInUp card darken-1 ">
                         <div class="card-content black-text midCard">
-                            <span class="card-title">Recent Signups</span>
+                            <span class="card-title">Recent Patient Signup</span>
                             <p>Jeraldy Cascayan</p>
-                            <p>John Doe</p>
-                            <p>Jane Doe</p>
+                            <p>Garett Pascual Folster</p>
+                            <p>Zea Levine</p>
+                            <p>Harvey La Fradez</p>
                         </div>
 
                     </div>
