--- a/public/index.html
+++ b/public/index.html
@@ -183,7 +183,7 @@
               <span style="font-family: Aldrich; color: #008080; font-size: 2rem">c</span><span style="font-family: Aldrich; color: #004c4c; font-size: 3rem">ai</span><span style="font-family: Aldrich; color: #008080; font-size: 2rem">rrier</span>
               <span style="font-family: Montserrat; font-size: 2rem">is a HIPAA compliant semi-automated two way messaging system designed for</span>
               <span style="font-family: Aldrich; color: #008080; font-size: 2rem">healthcare</span>
-              <span style="font-family: Aldrich; color: #004c4c; font-size: 2rem">professionals</span>
+              <span style="font-family: Aldrich; color: #004c4c; font-size: 2rem">providers</span>
               <span style="font-family: Montserrat; font-size: 2rem">and powered by</span>
               <span style="font-family: Aldrich; color: #008080; font-size: 2rem">artificial</span>
               <span style="font-family: Aldrich; color: #004c4c; font-size: 2rem">intelligence</span>
