--- a/public/adminPages/dashboard.html
+++ b/public/adminPages/dashboard.html
@@ -35,174 +35,34 @@
                             <div class="background">
                             </div>
                             <a href="../homePage2.html"><img class="circle" src="../images/cAIrrierLogoTrans.png"></a>
-                <a href=" #name"><span class="name">cAIrrier test flight</span></a>
+                            <a href="dashboard.html"><span class="name">Welcome to cAIrrier</span></a>
                             <a href="#email"><span class="email">cAIrrier@gmail.com</span></a>
                         </div>
                     </li>
-                    <li class="active"><a href="./dashboard.html"><i class="material-icons">dashboard</i>dashboard</a>
+                    <div class="divider"></div>
+                    <li class="active">
+                        <a href="./dashboard.html"><i class="material-icons">dashboard</i>Dashboard</a>
                     </li>
                     <li>
                         <div class="divider"></div>
                     </li>
                     <li><a class="subheader">Applications</a></li>
-                    <li><a href="./applications/toDo.html"><i class="material-icons">note</i>Chat</a></li>
-                    <li><a href="./applications/mail.html"><i class="material-icons">email</i>Contacts</a></li>
+                    <li><a href="./applications/toDo.html"><i class="material-icons">face</i>Patients</a></li>
+                    <li><a href="./applications/mail.html"><i class="material-icons">email</i>Messages</a></li>
+                    <li><a href="./applications/mail.html"><i class="material-icons">archive</i>Past Replies</a></li>
+                    <li><a href="./applications/mail.html"><i class="material-icons">assessment</i>Diagnostics</a></li>
                     <li>
                         <div class="divider"></div>
                     </li>
                     <li><a class="subheader">Accounts</a></li>
-                    <li><a href="#!"><i class="material-icons">group_add</i>Invitations</a></li>
-                    <li><a href="#!"><i class="material-icons">people</i>Users</a></li>
-
-                    <li>
-                        <div class="divider"></div>
-                    </li>
-                    <li><a class="subheader">Pages</a></li>
-                    <li><a href="../pages/Contribution.html"><i class="material-icons">attach_money</i>Contributions</a>
-                    </li>
-                    <li><a class="waves-effect" href="./pageEdits/eventPosts.html"><i class="material-icons">event</i>Event Posts</a></li>
-                    <li>
-                        <div class="divider"></div>
-                    </li>
-                    <li><a class="waves-effect" href="#!"><i class="material-icons">settings</i>Settings</a></li>
+                    <li><a href="#!"><i class="material-icons">settings</i>My Account</a></li>
+                    <li><a href="#!"><i class="material-icons">people</i>Other Users</a></li>
             </ul>
         </div>
-        <div id="colorHeader">
-        </div>
-        <div id="content" class="container">
 
-            <!-- Modal Structure -->
-            <div id="modal1" class="modal">
-                <div class="modal-content">
-                    <div class="container">
-                        <h5>Admin Panel</h5>
-                        <h6>Welcome!</h6>
-                        <br>
-                        <p>Admin Panel is a feature that allows admin to create, edit, and view data presented by users registered to our application. We aim to condense all features and simplify it into a single page application, without heavy effort.</p>
-                        <p>We hope you enjoy!</p>
-                    </div>
-                </div>
-                <div class="model-footer">
-                    <a id="closeBtn" class="modal-close btn waves-effect white grey-text darken-text-2">Close</a>
-                </div>
+        
 
-            </div>
-
-
-            <div id="navRow" class="row">
-                <div class="col-sm-10">
-                    <nav>
-                        <div class="nav-wrapper">
-                            <form>
-                                <div class="input-field">
-                                    <input id="search" type="search" required>
-                                    <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                                    <i class="material-icons">close</i>
-                                </div>
-                            </form>
-                        </div>
-                    </nav>
-                </div>
-                <div id="icons" class="col-md-2">
-                    <a href=""><label class="label-icon"><i
-                                class="clickable material-icons icon-white">fullscreen</i></label></a>
-                    <label class="label-icon"><i
-                            class="clickable material-icons icon-white">notifications_none</i></label>
-                    <a href=""><label class="label-icon"><i
-                                class="clickable material-icons icon-white">settings</i></label></a>
-                </div>
-            </div>
-
-
-
-
-
-
-            <div id="topRow" class="row">
-                <div class="col-sm-5">
-                    <div class="animated fadeInLeft card darken-1 topCard">
-                        <div class="card-content black-text">
-                            <span class="card-title">Preditive Patterns</span>
-                            <div id="linePlot" class="ct-chart .ct-perfect-fifth"></div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-7">
-                    <div class=" animated fadeInRight card darken-1 topCard">
-                        <div class="card-content black-text">
-                            <span class="card-title">Patient Analysis</span>
-                            <div id="compBar" class="ct-chart .ct-major-seventh "></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-            <div id="midRow" class="row">
-                <div class="col-md-5">
-                    <div class=" animated fadeInUp card darken-1 ">
-                        <div class="card-content black-text midCard">
-                            <span class="card-title">Smart Diagnostics</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-3">
-                    <div class=" animated fadeInUp card darken-1 ">
-                        <div class="card-content black-text midCard">
-                            <span class="card-title">Urgent Messages</span>
-                            <p>Based on John Doe's sms message, our algorithm predicts that he has high symptons of anxiety!</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="animated fadeInUp card darken-1 ">
-                        <div class="card-content black-text midCard">
-                            <span class="card-title">Recent Patient Signup</span>
-                            <p>Jeraldy Cascayan</p>
-                            <p>Garett Pascual Folster</p>
-                            <p>Zea Levine</p>
-                            <p>Harvey La Fradez</p>
-                        </div>
-
-                    </div>
-                </div>
-
-
-            </div>
-
-            <div id="bottomRow" class="row">
-                <div class="col-md-4">
-                    <div class="animated fadeInUp card darken-1 ">
-                        <div class="card-content black-text">
-                            <span class="card-title">Total Members</span>
-                            <p>42</p>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-md-8">
-                    <div class="animated fadeInUp card darken-1 ">
-                        <div class="card-content black-text">
-                            <span class="card-title">Quaterly Value</span>
-                            <div id="quaterBar" class="ct-chart .ct-major-second"></div>
-                        </div>
-                        <div class="card-action">
-                            <a href="#">This is a link</a>
-                            <a href="#">This is a link</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-
-
-
-        </div>
+        
 
 
     </div>
