--- a/public/adminPages/dashboard.html
+++ b/public/adminPages/dashboard.html
@@ -60,7 +60,14 @@
             </ul>
         </div>
 
-        <div class="row"></div>
+        <div class="row">
+            <div class="col-sm-10">
+                <img src="../images/NavTrans.png" class="responsive-img">
+            </div>
+            <div class="col-sm-2">
+                <a href="#"><i class="material-icons">notifications_none</i></a>
+            </div>
+        </div>
 
         
 
