--- a/public/adminPages/dashboard.html
+++ b/public/adminPages/dashboard.html
@@ -2,16 +2,10 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-
-
-
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="../style/materialize.css" media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="../style/materialize.css"/>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js" />
@@ -60,18 +54,21 @@
             </ul>
         </div>
 
-        <div class="row">
-            <div class="col-sm-10">
-                <img src="../images/NavTrans.png" class="responsive-img">
+        <div id="cont">
+            <div class="row teal" style="margin: 0;">
+                <div class="col s10">
+                    <div>
+                        <img src="../images/NavTrans.png" class="responsive-img">
+                    </div>
+                </div>
             </div>
-            <div class="col-sm-2">
-                <a href="#"><i class="material-icons">notifications_none</i></a>
-            </div>
+
+            
+
+
+
+
         </div>
-
-        
-
-
     </div>
 
 
