--- a/public/adminPages/applications/chat.html
+++ b/public/adminPages/applications/chat.html
@@ -24,7 +24,7 @@
     <link type="text/css" rel="stylesheet" href="../../style/animate.css" media="screen,projection" />
 
 
-    <script defer src="../../js/flightChat.js"></script>
+    <script defer src="../../js/bundle.js"></script>
 </head>
 
 <body>
