--- a/public/adminPages/applications/chat.html
+++ b/public/adminPages/applications/chat.html
@@ -37,41 +37,31 @@
                         <div class="user-view">
                             <div class="background">
                             </div>
-                            <a href="../homePage2.html"><img class="circle" src="../../images/cAIrrierLogoTrans.png"></a>
-                            <a href=" #name"><span class="name">cAIrrier test flight</span></a>
+                            <a href="../dashboard.html"><img class="circle" src="/images/cAIrrierLogoTrans.png"></a>
+                <a href=" #name"><span class="name">Welcome to cAIrrier</span></a>
                             <a href="#email"><span class="email">cAIrrier@gmail.com</span></a>
                         </div>
                     </li>
-                    <li><a href="./dashboard.html"><i class="material-icons">dashboard</i>dashboard</a>
+                    <li class="active"><a href="./dashboard.html"><i class="material-icons">dashboard</i>dashboard</a>
                     </li>
                     <li>
                         <div class="divider"></div>
                     </li>
                     <li><a class="subheader">Applications</a></li>
-                    <li class="active"><a href="./applications/toDo.html"><i class="material-icons">note</i>Chat</a>
-                    </li>
-                    <li><a href="./applications/mail.html"><i class="material-icons">email</i>Contacts</a></li>
+                    <li><a href="./applications/toDo.html"><i class="material-icons">face</i>Patients</a></li>
+                    <li><a href="./applications/mail.html"><i class="material-icons">email</i>Messages</a></li>
+                    <li><a href="./applications/mail.html"><i class="material-icons">archive</i>Past Replies</a></li>
+                    <li><a href="./applications/mail.html"><i class="material-icons">assessment</i>Diagnostics</a></li>
                     <li>
                         <div class="divider"></div>
                     </li>
                     <li><a class="subheader">Accounts</a></li>
-                    <li><a href="#!"><i class="material-icons">group_add</i>Invitations</a></li>
-                    <li><a href="#!"><i class="material-icons">people</i>Users</a></li>
-
-                    <li>
-                        <div class="divider"></div>
-                    </li>
-                    <li><a class="subheader">Pages</a></li>
-                    <li><a href="../pages/Contribution.html"><i class="material-icons">attach_money</i>Contributions</a>
-                    </li>
-                    <li><a class="waves-effect" href="./pageEdits/eventPosts.html"><i
-                                class="material-icons">event</i>Event Posts</a></li>
-                    <li>
-                        <div class="divider"></div>
-                    </li>
-                    <li><a class="waves-effect" href="#!"><i class="material-icons">settings</i>Settings</a></li>
+                    <li><a href="#!"><i class="material-icons">settings</i>My Account</a></li>
+                    <li><a href="#!"><i class="material-icons">people</i>Other Users</a></li>
             </ul>
         </div>
+
+
         <div id="colorHeader">
         </div>
         <div id="content" class="container">
