--- a/public/adminPages/dashboard.html
+++ b/public/adminPages/dashboard.html
@@ -11,7 +11,7 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="../style/materialize.css" media="screen,projection" />
+    <link rel="stylesheet" href="../style/materialize.css">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js" />
@@ -45,7 +45,7 @@
                     </li>
                     <li><a class="subheader">Applications</a></li>
                     <li><a href="./applications/toDo.html"><i class="material-icons">face</i>Patients</a></li>
-                    <li><a href="./applications/mail.html"><i class="material-icons">email</i>Messages</a></li>
+                    <li><a href="./applications/chat.html"><i class="material-icons">email</i>Messages</a></li>
                     <li><a href="./applications/mail.html"><i class="material-icons">archive</i>Past Replies</a></li>
                     <li><a href="./applications/mail.html"><i class="material-icons">assessment</i>Diagnostics</a></li>
                     <li>
