--- a/public/adminPages/applications/diagnostics.html
+++ b/public/adminPages/applications/diagnostics.html
@@ -49,9 +49,9 @@
                     </li>
                     <li><a class="subheader">Applications</a></li>
                     <li><a href="./applications/patient.html"><i class="material-icons">face</i>Patients</a></li>
-                    <li class="active"><a href="./applications/chat.html"><i class="material-icons">email</i>Messages</a></li>
+                    <li><a href="./applications/chat.html"><i class="material-icons">email</i>Messages</a></li>
                     <li><a href="./applications/replies.html"><i class="material-icons">archive</i>Past Replies</a></li>
-                    <li><a href="./applications/diagnostics.html"><i class="material-icons">assessment</i>Diagnostics</a></li>
+                    <li class="active"><a href="./applications/diagnostics.html"><i class="material-icons">assessment</i>Diagnostics</a></li>
                     <li>
                         <div class="divider"></div>
                     </li>
