--- a/public/adminPages/dashboard.html
+++ b/public/adminPages/dashboard.html
@@ -33,21 +33,21 @@
                         <div class="user-view">
                             <div class="background">
                             </div>
-                            <a href="../dashboard.html"><img class="circle" src="../images/cAIrrierLogoTrans.png"></a>
+                            <a href="dashboard.html"><img class="circle" src="../images/cAIrrierLogoTrans.png"></a>
                 <a href=" #name"><span class="name">Welcome to cAIrrier</span></a>
                             <a href="#email"><span class="email">cAIrrier@gmail.com</span></a>
                         </div>
                     </li>
-                    <li class="active"><a href="./dashboard.html"><i class="material-icons">dashboard</i>dashboard</a>
+                    <li class="active"><a href="../dashboard.html"><i class="material-icons">dashboard</i>dashboard</a>
                     </li>
                     <li>
                         <div class="divider"></div>
                     </li>
                     <li><a class="subheader">Applications</a></li>
-                    <li><a href="./applications/patient.html"><i class="material-icons">face</i>Patients</a></li>
-                    <li><a href="./applications/chat.html"><i class="material-icons">email</i>Messages</a></li>
-                    <li><a href="./applications/replies.html"><i class="material-icons">archive</i>Past Replies</a></li>
-                    <li><a href="./applications/diagnostics.html"><i class="material-icons">assessment</i>Diagnostics</a></li>
+                    <li><a href="applications/patient.html"><i class="material-icons">face</i>Patients</a></li>
+                    <li><a href="applications/chat.html"><i class="material-icons">email</i>Messages</a></li>
+                    <li><a href="applications/replies.html"><i class="material-icons">archive</i>Past Replies</a></li>
+                    <li><a href="applications/diagnostics.html"><i class="material-icons">assessment</i>Diagnostics</a></li>
                     <li>
                         <div class="divider"></div>
                     </li>
