--- a/public/adminPages/applications/patient.html
+++ b/public/adminPages/applications/patient.html
@@ -96,64 +96,38 @@
 
             <div id="topRow" class="row">
                 <h1>Garett Pascual-Folster</h1>
-                <div class="col-sm-12">
+                <div class="col-sm-6">
                     <div class="animated fadeInLeft card darken-1 topCard">
                         <div id="chatApplication" class="card-content black-text">
-
-
-                            <div id="chatContainer">
+                            <div id="chatContainer" style="overflow-y: scroll">
                                 <div class="container">
                                     <img src="../../images/test.png" alt="Avatar">
-                                    <p>Hello. How are you today?</p>
-                                    <span class="time-right">11:00</span>
                                 </div>
 
                                 <div class="container darker">
-                                    <img src="../../images/test2.png" alt="Avatar" class="right">
-                                    <p>Hey! I'm fine. Thanks for asking!</p>
-                                    <span class="time-left">11:01</span>
+                                    <img src="../../images/test2.png" alt="Avatar">
                                 </div>
 
                                 <div class="container">
                                     <img src="../../images/test.png" alt="Avatar">
-                                    <p>Sweet! I kinda have something wrong with my body right now</p>
-                                    <span class="time-right">11:02</span>
                                 </div>
 
                                 <div class="container darker">
-                                    <img src="../../images/test2.png" alt="Avatar" class="right">
-                                    <p>Tell me more.</p>
-                                    <span class="time-left">11:05</span>
+                                    <img src="../../images/test2.png" alt="Avatar">
                                 </div>
                                 <div class="container">
                                     <img src="../../images/test.png" alt="Avatar">
-                                    <p>Yeah, I don't think my body feels good. I think it's something i ate last night. My bowel movements is totally different right now. What should I do?    </p>
-                                    <span class="time-right">11:00</span>
                                 </div>
-                            </div>
-                        </div>
-
-                        <div id="chatRow" class="row">
-                            <div class="col-sm-1">
-                                <h6>Dr. Cas</h6>
-                            </div>
-
-                            <div class="col-sm-10">
-                                <input id="msgValue" type="text" name="fname" value="John">
-                            </div>
-
-                            <div class="col-sm-1">
-                                <button id="buttonSend" class="btn waves-effect waves-light" type="submit" name="action">Send
-                                    <i class="material-icons right">send</i>
-                                </button>
-
-
                             </div>
                         </div>
 
                     </div>
+                </div>
 
+                <div class="col-sm-6">
+                    <div class="animated fadeInRight card darken-1">
 
+                    </div>    
                 </div>
 
             </div>
