--- a/public/adminPages/applications/patient.html
+++ b/public/adminPages/applications/patient.html
@@ -94,29 +94,44 @@
 
 
 
+            <h1 style="position: relative; top: 2rem">-- Patients --</h1>
             <div id="topRow" class="row">
-                <h1>Garett Pascual-Folster</h1>
-                <div class="col-sm-6">
-                    <div class="animated fadeInLeft card darken-1 topCard">
+                <div class="col-sm-6" style="height: 50vh !important;">
+                    <div class="animated fadeInLeft card darken-1 topCard" style="height: 50vh;">
                         <div id="chatApplication" class="card-content black-text">
-                            <div id="chatContainer" style="overflow-y: scroll">
-                                <div class="container">
-                                    <img src="../../images/test.png" alt="Avatar">
+                            <div id="chatContainer" style="height: inherit; overflow-y: scroll">
+                                <div class="container center" style="display: flex; justify-content: ceneter">
+                                    <i class="material-icons" style="font-size: 5rem" >account_circle</i>
+                                    <div class="container" style="height: 100%;">
+                                        <span class="center">John Doe</span>
+                                    </div>
                                 </div>
 
-                                <div class="container darker">
-                                    <img src="../../images/test2.png" alt="Avatar">
+                                <div class="container center darker" style="display: flex; justify-content: ceneter">
+                                    <i class="material-icons" style="font-size: 5rem" >account_circle</i>
+                                    <div class="container" style="height: 100%;">
+                                        <span class="center">John Doe</span>
+                                    </div>
                                 </div>
 
-                                <div class="container">
-                                    <img src="../../images/test.png" alt="Avatar">
+                                <div class="container center" style="display: flex; justify-content: ceneter">
+                                    <i class="material-icons" style="font-size: 5rem" >account_circle</i>
+                                    <div class="container" style="height: 100%;">
+                                        <span class="center">John Doe</span>
+                                    </div>
                                 </div>
 
-                                <div class="container darker">
-                                    <img src="../../images/test2.png" alt="Avatar">
+                                <div class="container center darker" style="display: flex; justify-content: ceneter">
+                                    <i class="material-icons" style="font-size: 5rem" >account_circle</i>
+                                    <div class="container" style="height: 100%;">
+                                        <span class="center">John Doe</span>
+                                    </div>
                                 </div>
-                                <div class="container">
-                                    <img src="../../images/test.png" alt="Avatar">
+                                <div class="container center" style="display: flex; justify-content: ceneter">
+                                    <i class="material-icons" style="font-size: 5rem" >account_circle</i>
+                                    <div class="container" style="height: 100%;">
+                                        <span class="center">John Doe</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -124,9 +139,9 @@
                     </div>
                 </div>
 
-                <div class="col-sm-6">
-                    <div class="animated fadeInRight card darken-1">
-
+                <div class="col-sm-6" style="font-size: 2rem;">
+                    <div class="animated fadeInRight card darken-1" style="margin-left: 2rem;">
+                        
                     </div>    
                 </div>
 
