--- a/public/adminPages/applications/chat.html
+++ b/public/adminPages/applications/chat.html
@@ -98,7 +98,7 @@
             <div id="topRow" class="row">
                 <h1>Garett Pascual-Folster</h1>
                 <div class="col-sm-12">
-                    <div class="animated fadeInLeft card darken-1 topCard">
+                    <div class="animated fadeInLeft card darken-1 topCard teal">
                         <div id="chatApplication" class="card-content black-text">
 
 
@@ -134,16 +134,16 @@
                             </div>
                         </div>
 
-                        <div id="chatRow" class="row">
-                            <div class="col-sm-1">
+                        <div id="chatRow" class="row white section" style="margin: 0">
+                            <div class="col-sm-2">
                                 <h6>Dr. Cas</h6>
                             </div>
 
-                            <div class="col-sm-10">
-                                <input id="msgValue" type="text" name="fname" value="John">
+                            <div class="col-sm-8">
+                                <input id="msgValue" type="text" name="fname" placeholder="Send Garett a message">
                             </div>
 
-                            <div class="col-sm-1">
+                            <div class="col-sm-2">
                                 <button id="buttonSend" class="btn waves-effect waves-light" type="submit" name="action">Send
                                     <i class="material-icons right">send</i>
                                 </button>
