--- a/public/adminPages/dashboard.html
+++ b/public/adminPages/dashboard.html
@@ -63,7 +63,7 @@
         <div id="content" class="container">
 
             <div id="navRow" class="row">
-                <div class="col-sm-10">
+                <div class="col-sm-10 card" style="background-color: #ffffff; border-radius: 1rem">
                     <img src="../images/NavTrans.png" class="responsive-img">
                 </div>
                 <div id="icons" class="col-md-2">
