--- a/public/adminPages/applications/patient.html
+++ b/public/adminPages/applications/patient.html
@@ -73,7 +73,7 @@
                         <div class="nav-wrapper">
                             <form>
                                 <div class="input-field">
-                                    <input type="search">
+                                    <input type="search" style="background-color: #008080">
                                     <label class="label-icon" for="search"><i class="material-icons">search</i></label>
                                     <i class="material-icons">close</i>
                                 </div>
