--- a/public/adminPages/applications/chat.html
+++ b/public/adminPages/applications/chat.html
@@ -43,7 +43,7 @@
                             <a href="#email"><span class="email">cAIrrier@gmail.com</span></a>
                         </div>
                     </li>
-                    <li><a href="../dashboard.html"><i class="material-icons">dashboard</i>dashboard</a>
+                    <li><a href="../dashboard.html"><i class="material-icons">dashboard</i>Dashboard</a>
                     </li>
                     <li>
                         <div class="divider"></div>
@@ -51,7 +51,7 @@
                     <li><a class="subheader">Applications</a></li>
                     <li><a href="../applications/patient.html"><i class="material-icons">face</i>Patients</a></li>
                     <li class="active"><a href="../applications/chat.html"><i class="material-icons">email</i>Messages</a></li>
-                    <li><a href="../applications/replies.html"><i class="material-icons">archive</i>Past Replies</a></li>
+                    <li><a href="../applications/replies.html"><i class="material-icons">archive</i>Library</a></li>
                     <li><a href="../applications/diagnostics.html"><i class="material-icons">assessment</i>Diagnostics</a></li>
                     <li>
                         <div class="divider"></div>
@@ -100,8 +100,6 @@
                 <div class="col-sm-12">
                     <div class="animated fadeInLeft card darken-1 topCard teal">
                         <div id="chatApplication" class="card-content black-text">
-
-
                             <div id="chatContainer">
                                 <div class="container">
                                     <img src="../../images/test.png" alt="Avatar">
@@ -132,41 +130,30 @@
                                     <span class="time-right">11:00</span>
                                 </div>
                             </div>
+
+                            <div id="chatRow" class="row" style="background-color: white; padding: 1rem; margin: 0; width: 80% !important">
+                                <div class="col-sm-2">
+                                    <h6>Dr. Cas</h6>
+                                </div>
+
+                                <div class="col-sm-8">
+                                    <input id="msgValue" type="text" name="fname" placeholder="Send Garett a message">
+                                </div>
+
+                                <div class="col-sm-2">
+                                    <button id="buttonSend" class="btn waves-effect waves-light" type="submit" name="action">Send
+                                        <i class="material-icons right">send</i>
+                                    </button>
+                                </div>
+
+
+
+                            </div>
                         </div>
-
-                        <div id="chatRow" class="row white section" style="margin: 0">
-                            <div class="col-sm-2">
-                                <h6>Dr. Cas</h6>
-                            </div>
-
-                            <div class="col-sm-8">
-                                <input id="msgValue" type="text" name="fname" placeholder="Send Garett a message">
-                            </div>
-
-                            <div class="col-sm-2">
-                                <button id="buttonSend" class="btn waves-effect waves-light" type="submit" name="action">Send
-                                    <i class="material-icons right">send</i>
-                                </button>
-
-
-                            </div>
-                        </div>
-
                     </div>
-
-
                 </div>
-
             </div>
-
-
-
-
-
         </div>
-
-
-    </div>
     </div>
 
 
