--- a/public/adminPages/applications/patient.html
+++ b/public/adminPages/applications/patient.html
@@ -42,7 +42,7 @@
                             <a href="#email"><span class="email">cAIrrier@gmail.com</span></a>
                         </div>
                     </li>
-                    <li><a href="../dashboard.html"><i class="material-icons">dashboard</i>dashboard</a>
+                    <li><a href="../dashboard.html"><i class="material-icons">dashboard</i>Dashboard</a>
                     </li>
                     <li>
                         <div class="divider"></div>
@@ -50,7 +50,7 @@
                     <li><a class="subheader">Applications</a></li>
                     <li class="active"><a href="../applications/patient.html"><i class="material-icons">face</i>Patients</a></li>
                     <li><a href="../applications/chat.html"><i class="material-icons">email</i>Messages</a></li>
-                    <li><a href="../applications/replies.html"><i class="material-icons">archive</i>Past Replies</a></li>
+                    <li><a href="../applications/replies.html"><i class="material-icons">archive</i>Library</a></li>
                     <li><a href="../applications/diagnostics.html"><i class="material-icons">assessment</i>Diagnostics</a></li>
                     <li>
                         <div class="divider"></div>
