--- a/public/adminPages/applications/patient.html
+++ b/public/adminPages/applications/patient.html
@@ -38,11 +38,12 @@
                             <div class="background">
                             </div>
                             <a href="../dashboard.html"><img class="circle" src="/images/cAIrrierLogoTrans.png"></a>
-                <a href=" #name"><span class="name">Welcome to cAIrrier</span></a>
+                            <a href=" #name"><span class="name">Welcome to cAIrrier</span></a>
                             <a href="#email"><span class="email">cAIrrier@gmail.com</span></a>
                         </div>
                     </li>
-                    <li><a href="../dashboard.html"><i class="material-icons">dashboard</i>Dashboard</a>
+                    <li>
+                        <a href="../dashboard.html"><i class="material-icons">dashboard</i>Dashboard</a>
                     </li>
                     <li>
                         <div class="divider"></div>
@@ -92,69 +93,22 @@
             </div>
 
 
-
-
-            <h1 style="position: relative; top: 2rem">-- Patients --</h1>
-            <div id="topRow" class="row">
-                <div class="col-sm-6" style="height: 50vh !important;">
-                    <div class="animated fadeInLeft card darken-1 topCard" style="height: 50vh;">
-                        <div id="chatApplication" class="card-content black-text">
-                            <div id="chatContainer" style="height: inherit; overflow-y: scroll">
-                                <div class="container center" style="display: flex; justify-content: ceneter">
-                                    <i class="material-icons" style="font-size: 5rem" >account_circle</i>
-                                    <div class="container" style="height: 100%;">
-                                        <span class="center">John Doe</span>
-                                    </div>
-                                </div>
-
-                                <div class="container center darker" style="display: flex; justify-content: ceneter">
-                                    <i class="material-icons" style="font-size: 5rem" >account_circle</i>
-                                    <div class="container" style="height: 100%;">
-                                        <span class="center">John Doe</span>
-                                    </div>
-                                </div>
-
-                                <div class="container center" style="display: flex; justify-content: ceneter">
-                                    <i class="material-icons" style="font-size: 5rem" >account_circle</i>
-                                    <div class="container" style="height: 100%;">
-                                        <span class="center">John Doe</span>
-                                    </div>
-                                </div>
-
-                                <div class="container center darker" style="display: flex; justify-content: ceneter">
-                                    <i class="material-icons" style="font-size: 5rem" >account_circle</i>
-                                    <div class="container" style="height: 100%;">
-                                        <span class="center">John Doe</span>
-                                    </div>
-                                </div>
-                                <div class="container center" style="display: flex; justify-content: ceneter">
-                                    <i class="material-icons" style="font-size: 5rem" >account_circle</i>
-                                    <div class="container" style="height: 100%;">
-                                        <span class="center">John Doe</span>
-                                    </div>
-                                </div>
-                            </div>
+            <div class="row">
+                <div class="col-sm-2"></div>
+                <div class="col-sm-10">
+                    <div class="animated fadeInLeft card darken-1">
+                        <div class="row" style="margin: 0.25rem">
+                            <h3 class="col-sm-8">Garett Pascual-Folster</h3>
+                            
                         </div>
-
                     </div>
                 </div>
-
-                <div class="col-sm-6" style="font-size: 2rem;">
-                    <div class="animated fadeInRight card darken-1" style="margin-left: 2rem;">
-                        
-                    </div>    
-                </div>
-
             </div>
 
 
 
 
-
         </div>
-
-
-    </div>
     </div>
 
 
