--- a/public/signin.html
+++ b/public/signin.html
@@ -106,7 +106,7 @@
 <!-- end Mixpanel -->
 <div class="container" id="form">
     <div id="header">
-        <h1 style="color: black; font-family: Aldrich">Let's get started</h1>
+        <h1 style="color: #008080; font-family: Aldrich">Let's get started</h1>
     </div>
 
 
