--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 
 
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
   <title>cAIrrier</title>
 
 
@@ -225,23 +225,27 @@
       <!--   Icon Section   -->
       <div class="card" style="border-radius: 4rem;">
         <div class="row" style="padding: 5rem 0rem">
-          <div class="col s12 m6">
+          <div class="col l6 m12">
             <div class="icon-block center">
               <div class="animated fadeInUp" id="introComponent"> <br>
-                <h4 class="Light animated slideInLeft">- What We Offer -</h4>
-                <p class="animated fadeInUp " id="desc">cAirrier lifts the workload off healthcare professionals, and
+                <h4 class="Light animated slideInLeft" style="font-family: Aldrich">What We Offer</h4>
+                <p class="animated fadeInUp" style="font-family: Aldrich" id="desc">
+                  <span style="font-family: Aldrich; color: #008080; font-size: 1.2rem">c</span><span style="font-family: Aldrich; color: #004c4c; font-size: 2rem">ai</span><span style="font-family: Aldrich; color: #008080; font-size: 1.2rem">rrier</span>
+                  lifts the workload off healthcare professionals, and
                   makes personal messaging with patients easy through intuitive features and beautiful user interfacing.
                   Deep Learning and merge field technology allows for innovative and personal provider-patient
                   communications that are sent from a local phone number directly to a patient’s existing messaging
                   platform. Our platform determines and delivers provider messages that are catered to an individual
                   patient, both through timed messages and suggested replies to frequently asked questions. HIPPA
                   compliance and customizable features ensure that our platform is right for your healthcare
-                  organization. Reach further using cAIrrier.</p>
+                  organization. Reach further using
+                  <span style="font-family: Aldrich; color: #008080; font-size: 1.2rem">c</span><span style="font-family: Aldrich; color: #004c4c; font-size: 2rem">ai</span><span style="font-family: Aldrich; color: #008080; font-size: 1.2rem">rrier</span>.
+                </p>
               </div>
             </div>
           </div>
 
-          <div class="col s12 m6">
+          <div class="col l6 hide-on-med-and-down">
             <div class="icon-block">
               <img src="images/pongsawat-pasom-GqNqFMh3OoU-unsplash.jpg" style="width: 100%; border-radius: 4rem;" class="responsive-img animated slideInRight">
             </div>
@@ -251,9 +255,8 @@
     </div>
   </div>
 
-  <div class="white" style="height: 2px; width: 100vw;"></div>
 
-  <div style="background-color: rgb(82, 189, 180); font-size: 1.2rem;">
+  <div style="background-color: #66b2b2; font-size: 1.2rem;">
     <div class="container">
       <div class="section">
         <div class="row">
@@ -295,7 +298,7 @@
   </div>
 
 
-  <div class="valign-wrapper teal" style="height: 75vh; color: white">
+  <div class="valign-wrapper" style="height: 75vh; color: black; background-color: white">
     <div class="row">
       <div class="col s12 center">
         <h1 class="Light">FOR HEALTH CARE WORKERS</h1>
@@ -361,13 +364,13 @@
 
     <div class="white" style="height: 2px; width: 100vw;"></div> -->
 
-  <div class="valign-wrapper white" style=" color: teal">
+  <div class="valign-wrapper" style=" color: white; background-color: #66b2b2">
     <div class="row">
       <div class="col s12 center">
         <h1 class="Light">NOT A DOCTOR?</h1>
         <a href="mailto:?subject=I wanted you to see this site&amp;body=Check out this site http://www.cairtext.com."
-        title="Share by Email" id="business-button" class="btn-small waves-effect waves-light teal lighten-1"
-          style="color: white;">Share to your doctor</a>
+        title="Share by Email" id="business-button" class="btn-small waves-effect waves-light white lighten-1"
+          style="color: #66b2b2">Share to your doctor</a>
           <br><br>
       </div>
     </div>
